# classroom

./: .dockerignore  .gitignore  README.md
.github/workflows/: docker.yml
api/: Dockerfile  pyproject.toml
api/classroom/: auth.py  coder_client.py  config.py  db.py  main.py  storage.py  tokens.py  ws.py  yjs.py
coder-templates/tp-claude/: Dockerfile  main.tf
nix/: classroom.nix
web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/admin/rooms/[id]/: page.tsx
web/app/room/[id]/: page.tsx
web/components/: CollabEditor.tsx  Timer.tsx  Toast.tsx
web/lib/: api.ts  useRoomSocket.ts  useYjsDoc.ts
